test/expected/include-empty_path.out
cdecl> include ""
               ^
3,9: error: empty path
